increase memory for JVM forked by sbt