@@ -44,7 +44,11 @@ testOptions := Seq(Tests.Filter(s => s.endsWith("Spec") ||
 fork in Test := true
 
 javaOptions ++= Seq("-Djava.security.krb5.realm=OX.AC.UK",
-                    "-Djava.security.krb5.kdc=kdc0.ox.ac.uk:kdc1.ox.ac.uk")
+                    "-Djava.security.krb5.kdc=kdc0.ox.ac.uk:kdc1.ox.ac.uk",
+                    "-Xms3072m",
+                    "-Xmx3072m",
+                    "-XX:MaxPermSize=768m",
+                    "-XX:ReservedCodeCacheSize=1536m")
 
 publishArtifact in packageDoc := false // disable building docs, as it takes so much time
 
